08 Fix scss, visible ingredients in recipe

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,6 +9,9 @@
  * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
+ *
+ *= require_tree .
+ *= require_self
  */
 
  @import "bootstrap";
@@ -43,49 +46,4 @@ body{
 
 .bot{
 	margin-right: 1.2%;
-}
-
-
-// ingredient
-
-
-.dropzone {
-  height: 250px;
-  background-color: rgb(250, 250, 250);
-  border: dashed 4px transparent;
-  border-radius: 4px;
-  // margin: 10px;
-  padding-left: 10px;
-  // width: 99%;
-  transition: background-color 0.3s;
-}
-
-.drop-active {
-  border-color: #aaa;
-}
-
-.drop-target {
-  background-color: #29e;
-  border-color: #fff;
-  border-style: solid;
-}
-
-.drag-drop {
-  display: inline-block;
-  min-width: 40px;
-  padding: 1em 0.75em;
-
-  color: #fff;
-  background-color: #29e;
-  border: solid 2px #fff;
-
-  -webkit-transform: translate(0px, 0px);
-          transform: translate(0px, 0px);
-
-  transition: background-color 0.3s;
-}
-
-.drag-drop.can-drop {
-  color: #000;
-  background-color: #4e4;
 }
