--- a/app/assets/stylesheets/recipes.scss
+++ b/app/assets/stylesheets/recipes.scss
@@ -1,3 +1,40 @@
 // Place all the styles related to the Recipes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.compositions li {
+  display: block;
+  letter-spacing: -1ex;
+  margin: 5px 0;
+}
+
+.ingredient {
+  margin-right: -30%;
+  width: 70%;
+  vertical-align: top;
+  overflow: hidden;
+  display: inline-block;
+  letter-spacing: normal;
+}
+.ingredient:after {
+  content: '';
+  display: inline-block;
+  width: 100%;
+  margin: 0 -99% 0 3px;
+  vertical-align: baseline;
+  border-bottom: 1px dashed #888;
+}
+.ingredient-value {
+  display: inline-block;
+  letter-spacing: normal;
+  padding-left: 3px;
+  margin-left: 30%;
+  width: 30%;
+  vertical-align: bottom;
+}
+
+.jumbotron {
+  margin-top: 20px;
+  padding-top: 2rem !important;
+  padding-bottom: 2rem !important;
+}
